--- a/Thesis.tex
+++ b/Thesis.tex
@@ -79,14 +79,15 @@ Thank you all.
 %\input{Chapter5}
 \input{Conclusion}
 
-\printindex
+
 %\appendix
 
 %\include{Appendix1}
-
+\glsaddall
+\printglossaries
 \bibliographystyle{ThesisStyle}
 \bibliography{Thesis_f}
-
+\printindex
 %\printnomenclature
 
 \cleardoublepage
